--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -42,17 +42,15 @@ table {
 
 body {
   color: #fff;
-  font-family: 'roboto', helvetica, arial, sans-serif;
+  font-family: 'roboto', Helvetica, Arial, sans-serif;
   font-size: 12px;
   font-weight: 100;
-  height: 100%;
 }
 
 /* Header */
 
 .menu {
   position: relative;
-  padding-bottom: 30px;
 }
 
 /*HEADER MENU STYLES*/
@@ -101,6 +99,7 @@ header {
   text-indent: -10000px;
   background: url("../img/logo-mobile@2x.png") no-repeat center center;
   background-size: contain;
+  width: 100vw;
 }
 
 @media screen and (min-width: 769px) {
@@ -120,6 +119,10 @@ header {
   .desktop-menu {
     display: block;
     list-style: none;
+    /* The next rule is used to prevent the underline of the login element to go outside
+     * of the grid but prokoves the menu to not be centered if the highlighted element isn't the login.
+     * This is a temporal fix. */
+    padding-right: 15px;
   }
 
   .desktop-menu img {
@@ -318,13 +321,17 @@ header {
   background-color: #92b9c6;
   font-size: 14px;
   font-weight: 700;
-  line-height: 1.29;
+  line-height: 60px;
   letter-spacing: 1px;
   text-align: center;
   text-transform: uppercase;
   display: block;
   align-items: center;
   padding: 0 30px;
+  height: 60px;
+  color: #fff;
+  text-decoration: none;
+  margin: 15px 0;
 }
 
 .img_mobile {
@@ -381,8 +388,8 @@ header ul {
 }
 
 section {
-  background-color: rgba(23, 64, 132, 0.8);
-  height: calc(100% + 120px);
+  /*background-color: rgba(23, 64, 132, 0.8);
+  height: calc(100% + 120px);*/
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -391,21 +398,20 @@ section {
 }
 
 section.pwd {
-  padding: 0 20%;
+  padding: 60px 30px 0 30px;
 }
 
 h1 {
   font-weight: bold;
   font-size: 70px;
-  margin: 60px 0;
   text-align: center;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  width: 450px;
-  height: 100%;
+  /*width: 450px;*/
+  /*height: 100%;*/
   /* padding: 0 20%; */
 }
 
@@ -448,13 +454,21 @@ label {
 }
 
 input, textarea {
-  height: 30px;
+  -webkit-appearance: none;
+  height: 40px;
   padding: 0 6px;
+  border-radius: 0;
   border: 0;
-  font-size: 11px;
-  font-family: helvetica, arial, sans-serif;
+  font-size: 14px;
+  font-family: 'roboto', Helvetica, Arial, sans-serif;
   flex-shrink: 0;
 }
+
+  /*input[type="submit"] {
+    width: 100%;
+    font-size: 23px;
+    display: block;
+  }*/
 
 textarea {
   padding: 6px;
@@ -488,6 +502,7 @@ input[type='submit'] {
   height: 60px;
   cursor: pointer;
   letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 
 select::-ms-expand {
@@ -526,13 +541,21 @@ select::-ms-expand {
   top: 5px;
 }
 
-section p {
+/*section p {
   line-height: 30px;
   font-size: 20px;
   text-align: center;
   letter-spacing: 0.7px;
   margin: 20px 0;
-}
+}*/
+
+
+/*section p {
+  line-height: 30px;
+  font-size: 25px;
+  text-align: left;
+  letter-spacing: 0.7px;
+}*/
 
 .cancel {
   width: 100%;
@@ -540,11 +563,6 @@ section p {
   text-decoration: none;
   color: #fff;
   font-size: 15px;
-}
-
-.log span {
-  display: flex;
-  justify-content: space-around;
 }
 
 .select_container:after {
@@ -560,13 +578,6 @@ section p {
   top: 5px;
 }
 
-section p {
-  line-height: 30px;
-  font-size: 25px;
-  text-align: left;
-  letter-spacing: 0.7px;
-}
-
 #first_p {
   margin-top: 20px;
 }
@@ -580,34 +591,48 @@ section p {
 
 .log span {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-around;
 }
 
 .log span > a {
   font-size: 14px;
   font-weight: 500;
+  width: auto;
+  margin-bottom: 10px;
 }
 
 hr {
   width: 100%;
   margin: 40px 0;
+  border: none;
+  border-top: 1px solid #fff;
 }
 
 .login_buttons {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-top: 40px;
 }
 
 .login_buttons a {
-  width: 49%;
+  flex-basis: 100%;
   height: 60px;
   text-transform: uppercase;
   line-height: 60px;
   text-align: center;
   text-decoration: none;
   color: #fff;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 769px) {
+  .login_buttons a {
+    flex-basis: calc(50% - 7px);
+  }
 }
 
 .login_buttons a.fb {
@@ -667,7 +692,6 @@ section.reg form {
 
 .bg {
   background-size: cover;
-  background: no-repeat fixed 50%;
 }
 
 .bg.reg {
@@ -721,6 +745,7 @@ section.reg form {
 
 #login_p {
   text-align: center;
+  font-size: 25px;
 }
 
 @media only screen and (max-device-width: 768px) {
@@ -742,28 +767,9 @@ section.reg form {
 
   section {
     justify-content: flex-start;
-    padding: 10% 0 0 !important;
+    /*padding: 10% 0 0 !important;
     height: 170%;
-    max-height: 170%;
-  }
-
-  header nav {
-    width: 55%;
-  }
-
-  header a {
-    font-size: 26px !important;
-  }
-
-  body {
-    font-size: 22px;
-  }
-
-  section {
-    justify-content: flex-start;
-    /* padding: 10% 0 0!important; */
-    /* height: 170%; */
-    /*max-height: 170%;*/
+    max-height: 170%;*/
   }
 
   select {
@@ -771,14 +777,14 @@ section.reg form {
     font-size: 23px !important;
   }
 
-  form {
+  /*form {
     width: 80% !important;
-  }
+  }*/
 
-  label {
+  /*label {
     font-size: 25px !important;
     margin: 45px 0 0 !important;
-  }
+  }*/
 
   h1 {
     margin: 0 0 0px !important;
@@ -791,21 +797,6 @@ section.reg form {
   label {
     font-size: 14px;
     margin: 45px 0 0;
-  }
-
-  input {
-    -webkit-appearance: none;
-    height: 60px;
-    padding: 0 6px;
-    border: 0;
-    font-size: 23px;
-    border-radius: 0;
-  }
-
-  input[type="submit"] {
-    width: 100%;
-    font-size: 23px;
-    display: block;
   }
 
   .tos span input {
@@ -1006,6 +997,7 @@ section.reg form {
 @media screen and (min-width: 640px) {
   form {
     max-width: 450px;
+    margin: 0 auto;
   }
 
   input[type='submit'] {
