--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -397,7 +397,8 @@ section {
   padding: 0 30px;
 }
 
-section.pwd {
+section.pwd,
+section.reg {
   padding: 60px 30px 0 30px;
 }
 
@@ -432,17 +433,6 @@ form {
   /* height: 100%; */
 }
 
-.reg form {
-  display: block;
-  text-align: center;
-}
-
-.reg form input[type="submit"] {
-  width: 98%;
-  position: relative;
-  left: -1%;
-}
-
 label {
   text-transform: uppercase;
   font-size: 14px;
@@ -453,7 +443,7 @@ label {
   font-family: helvetica, arial, sans-serif;
 }
 
-input, textarea {
+input, textarea, select {
   -webkit-appearance: none;
   height: 40px;
   padding: 0 6px;
@@ -464,33 +454,35 @@ input, textarea {
   flex-shrink: 0;
 }
 
-  /*input[type="submit"] {
-    width: 100%;
-    font-size: 23px;
-    display: block;
-  }*/
+input:required {
+  box-shadow: inset -6px 0px 0px #ef4323;
+}
+
+select {
+  cursor: pointer;
+  color: #a9a9a9;
+  background: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTMiIGhlaWdodD0iOSIgdmlld0JveD0iMCAwIDEzIDkiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHRpdGxlPlRyaWFuZ2xlIDEgQ29weTwvdGl0bGU+PHBhdGggZD0iTTEyIDFMNi41IDYuNyAxIDEiIHN0cm9rZS13aWR0aD0iMiIgc3Ryb2tlPSIjNTU1IiBmaWxsPSJub25lIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiLz48L3N2Zz4=") center right 20px no-repeat, #fff;
+}
+
+input[type="checkbox"] {
+  -webkit-appearance: checkbox;
+  width: 21px;
+  height: 21px;
+  background-color: #fff;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  margin: 0;
+}
+
+input[type="checkbox"]:required {
+  box-shadow: none;
+}
 
 textarea {
   padding: 6px;
   height: 100px;
 }
 
-input:required {
-  box-shadow: inset -6px 0px 0px #ef4323;
-}
-
-.tos span input:required {
-  box-shadow: 0px 0px 0px transparent;
-}
-
-.tos span span {
-  border-bottom: 2px solid #ef4323;
-}
-
-.tos a {
-  color: #fff;
-  text-decoration: none;
-}
 
 input[type='submit'] {
   background-color: rgb(140, 187, 198);
@@ -507,38 +499,6 @@ input[type='submit'] {
 
 select::-ms-expand {
   display: none;
-}
-
-.select_container {
-  position: relative;
-}
-
-.select_container select {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  cursor: pointer;
-  background: #fff;
-  width: 100%;
-  padding: 6px;
-  color: #a9a9a9;
-  font-size: 11px;
-  line-height: 1;
-  border: 0;
-  border-radius: 0;
-  height: 30px;
-}
-
-.select_container:after {
-  width: 15px;
-  position: absolute;
-  content: '';
-  height: 15px;
-  background: transparent;
-  border-left: lightgrey 1px solid;
-  border-bottom: lightgrey 1px solid;
-  transform: rotate(-45deg);
-  right: 15px;
-  top: 5px;
 }
 
 /*section p {
@@ -565,30 +525,9 @@ select::-ms-expand {
   font-size: 15px;
 }
 
-.select_container:after {
-  width: 15px;
-  position: absolute;
-  content: '';
-  height: 15px;
-  background: transparent;
-  border-left: lightgrey 1px solid;
-  border-bottom: lightgrey 1px solid;
-  transform: rotate(-45deg);
-  right: 15px;
-  top: 5px;
-}
-
 #first_p {
   margin-top: 20px;
 }
-
-.cancel {
-  text-align: center;
-  text-decoration: none;
-  color: #fff;
-  font-size: 15px;
-}
-
 .log span {
   display: flex;
   flex-direction: column;
@@ -610,6 +549,7 @@ hr {
   border-top: 1px solid #fff;
 }
 
+/* TODO: fb and google icon */
 .login_buttons {
   width: 100%;
   display: flex;
@@ -646,7 +586,7 @@ hr {
 section.reg form {
   width: 100%;
 }
-
+/*
 .column-container {
   display: flex;
   flex-direction: row;
@@ -668,26 +608,68 @@ section.reg form {
 
 .column input {
   width: 100%;
+}*/
+
+.reg-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.reg-form div {
+  flex-basis: 100%;
+  margin-bottom: 25px;
+}
+
+@media only screen and (min-width: 768px) {
+  .reg-form div {
+    flex-basis: calc(50% - 10px);
+  }
+}
+
+.reg-form div:first-of-type {
+  margin-top: 30px;
+}
+
+.reg-form div:last-of-type {
+  margin-bottom: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .reg-form div:nth-of-type(2) {
+    margin-top: 30px;
+  }
+}
+
+.reg-form label,
+.reg-form input,
+.reg-form select {
+  width: 100%;
 }
 
 .tos {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   margin: 40px 0 0 0;
-  justify-content: space-around;
-  width: 98%;
 }
 
-.tos span {
-  display: inline-block;
-  font-size: 15px;
+.tos label {
+  text-transform: none;
+  margin: 0 0 0 16px;
+  flex-basis: calc(100% - 37px);
 }
 
-.tos input:required {
-  height: 12px;
-  transform: scale(1.3);
-  -webkit-transform: scale(1.3);
-  position: relative;
-  top: -1px;
+@media only screen and (min-width: 768px) {
+  .tos label {
+    flex-basis: calc(50% - 37px);
+  }
+}
+
+.tos a {
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid #db3236;
 }
 
 .bg {
@@ -766,10 +748,10 @@ section.reg form {
     max-height: 170%;*/
   }
 
-  select {
+  /*select {
     height: 60px !important;
     font-size: 23px !important;
-  }
+  }*/
 
   /*form {
     width: 80% !important;
@@ -780,66 +762,21 @@ section.reg form {
     margin: 45px 0 0 !important;
   }*/
 
-  h1 {
+  /*h1 {
     margin: 0 0 0px !important;
-  }
+  }*/
 
   form {
     /* width: 80% !important; */
   }
-
+/*
   label {
     font-size: 14px;
     margin: 45px 0 0;
-  }
-
-  .tos span input {
-    -webkit-appearance: checkbox;
-  }
-
-  .select_container:after {
-    top: 20px;
-  }
-
-  .tos span input {
-    -webkit-appearance: checkbox;
-  }
-
-  .select_container:after {
-    top: 20px;
-  }
-
-  .tos input:required {
-    height: 12px;
-    transform: scale(2.5);
-    -webkit-transform: scale(2.5);
-    position: relative;
-    top: -1px;
-  }
-
-  .tos span {
-    font-size: 23px;
-  }
+  }*/
 
   .pwd p {
     font-size: 35px;
-    line-height: 40px;
-  }
-
-  .res .pwd p {
-    width: 80%;
-  }
-
-  .cancel {
-    font-size: 23px;
-  }
-
-  .tos span {
-    font-size: 23px;
-  }
-
-  .pwd p {
-    font-size: 14px;
     line-height: 40px;
   }
 
@@ -995,6 +932,10 @@ section.reg form {
   form {
     max-width: 450px;
     margin: 0 auto;
+  }
+
+  .reg form {
+    max-width: 730px;
   }
 
   input[type='submit'] {
