--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -252,10 +252,11 @@
 
 .lightPanel {
   background-color: $color-mid-blue;
-  margin-right: -25px;
+  margin-bottom: 10px;
   margin-left: -25px;
-  padding-left: 25px;
+  margin-right: -25px;
   color: $color-white;
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-left: 25px;
 }
