--- a/app/styles/components/map/areas-panel.scss
+++ b/app/styles/components/map/areas-panel.scss
@@ -41,6 +41,22 @@
     }
   }
 
+  .newItem {
+    background-color: $color-mid-blue;
+    margin-bottom: 10px;
+    margin-left: -25px;
+    margin-right: -25px;
+    color: $color-white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 25px;
+  }
+
+  .recentLabel {
+    font-size: 14px;
+    padding-bottom: 10px;
+  }
+
   .areaItem {
     align-items: center;
     display: flex;
