--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -253,8 +253,8 @@
 .lightPanel {
   background-color: $color-mid-blue;
   margin-bottom: 10px;
-  margin-left: -25px;
-  margin-right: -25px;
+  margin-left: -15px;
+  margin-right: -15px;
   color: $color-white;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -263,10 +263,54 @@
 
 .panel {
   margin-bottom: 10px;
-  margin-left: -25px;
-  margin-right: -25px;
+  margin-left: -15px;
+  margin-right: -15px;
   color: $color-white;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 25px;
+}
+
+
+.submenu {
+  flex-direction: column;
+  display: flex;
+  height: 100%;
+  padding: 10px 15px;
+
+  .submenuHeader {
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+
+    @media #{$mq-tablet} {
+      flex-direction: row;
+    }
+
+    .submenuTitle {
+      color: $color-4;
+      cursor: default;
+      font-family: $font-family-1;
+      font-size: $font-size-xxs-small;
+      font-weight: $font-weight-bold;
+      margin: 5px 0 0;
+      text-align: left;
+      text-transform: uppercase;
+
+      @media #{$mq-tablet} {
+        font-size: $font-size-x-small;
+        margin: 0;
+        text-align: left;
+      }
+    }
+
+    .icon {
+      fill: $color-4;
+      min-height: 18px;
+
+      @media #{$mq-tablet} {
+        min-height: none;
+      }
+    }
+  }
 }
