--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -250,11 +250,11 @@
   }
 }
 
-.lightPanel {
+.lightItem {
   background-color: $color-mid-blue;
   margin-bottom: 10px;
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -35px;
+  margin-right: -35px;
   color: $color-white;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -282,6 +282,8 @@
     align-items: center;
     justify-content: space-between;
     display: flex;
+    padding-bottom: 15px;
+    padding-top: 24px;
 
     @media #{$mq-tablet} {
       flex-direction: row;
@@ -303,7 +305,21 @@
         text-align: left;
       }
     }
+  }
 
+  .submenuContent {
+    -webkit-overflow-scrolling: touch;
+    height: calc(100% - 108px);
+    overflow-y: auto;
+    padding: 15px 20px;
+
+    @media #{$mq-tablet} {
+      height: auto;
+      margin: 10px 0 0;
+      max-height: none;
+      overflow-y: visible;
+      padding: 15px 20px;
+    }
   }
 }
 
