--- a/app/styles/components/map/areas-panel.scss
+++ b/app/styles/components/map/areas-panel.scss
@@ -3,12 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 10px 0 0;
 
   .actionButtons {
     button {
-      width: calc(50% - 20px);
-      margin-right: 20px;
+      width: 100%;
+      margin-top: 20px;
     }
   }
 
