--- a/app/styles/components/submenu.scss
+++ b/app/styles/components/submenu.scss
@@ -1,4 +1,5 @@
 @import '../settings';
+@import '../mixins';
 
 .submenu {
   flex-direction: column;
@@ -18,24 +19,33 @@
       flex-direction: row;
     }
 
+
     .titleContainer {
       display: flex;
-    }
-    .title {
-      color: $color-4;
-      cursor: default;
-      font-family: $font-family-1;
-      font-size: $font-size-xxs-small;
-      font-weight: $font-weight-bold;
-      margin: 5px 0 0;
-      padding-left: 8px;
-      text-align: left;
-      text-transform: uppercase;
+      align-items: center;
+      
+      .back {
+        @include arrow(8px, 2px, $color-4, 'left');
+        pointer-events: none;
+        margin-top: 7px;
+        transform: rotate(45deg) translate(0, -50%);
+      }
 
-      @media #{$mq-tablet} {
-        font-size: $font-size-x-small;
-        margin: 0;
+      .title {
+        color: $color-4;
+        cursor: default;
+        font-family: $font-family-1;
+        font-size: $font-size-xxs-small;
+        font-weight: $font-weight-bold;
+        padding-left: 8px;
         text-align: left;
+        text-transform: uppercase;
+
+        @media #{$mq-tablet} {
+          font-size: $font-size-x-small;
+          margin: 0;
+          text-align: left;
+        }
       }
     }
   }
