--- a/app/styles/components/submenu.scss
+++ b/app/styles/components/submenu.scss
@@ -1,190 +1,63 @@
 @import '../settings';
 
-.controlpanel {
-  background: rgba($color-1, .95);
-  height: $mobile-height;
-  left: 0;
-  position: absolute;
-  top: $header-height-mobile;
-  width: 100%;
-  z-index: 102;
-
-  &._noHeader {
-    top: 0;
-  }
-
-  @media #{$mq-tablet} {
-    background: transparent;
-    flex: 0 1 auto;
-    height: auto;
-    overflow-y: auto;
-    // cancels pointer-events: none of c-map-panels
-    pointer-events: auto;
-    position: relative;
-    top: 0;
-    width: 100%;
-  }
-
-  > .bgWrapper {
-    background: rgba($color-1, .95);
-    box-shadow: 29px 0 4px 0 rgba($color-12, .5);
-
-    @media #{$mq-tablet} {
-      margin-left: $control-panel-left-offset;
-    }
-  }
-
-  .resumeDisplay {
-    border-bottom: 1px solid rgba($color-7, .4);
-    display: none;
+.submenu {
+  .main {
     flex-direction: column;
-    padding: 30px 56px 25px 25px;
-
-    @media #{$mq-tablet} {
-      display: flex;
-    }
-
-    .fishingHours {
-      cursor: pointer;
-      margin-left: 5px;
-    }
-
-    .counterDescription {
-      color: rgba($color-3, .5);
-      font-family: $font-family-1;
-      font-size: $font-size-xs-small;
-      font-weight: $font-weight-bold;
-      line-height: 1;
-      text-transform: uppercase;
-    }
-
-    .total {
-      color: $color-4;
-      font-family: $font-family-1;
-      font-size: $font-size-s-medium;
-      font-weight: $font-weight-bold;
-    }
-
-    > .categoriesDisplay {
-      display: flex;
-      justify-content: space-between;
-
-      > .vesselDisplay,
-      > .activityDisplay {
-        display: flex;
-        flex-direction: column;
-      }
-    }
-  }
-
-  .mapOptions {
     display: flex;
     height: 100%;
-    justify-content: space-between;
-    padding: 0 15px;
+    padding: 10px 15px;
 
-    @media #{$mq-tablet} {
-      flex-wrap: wrap;
-      padding: 0;
-    }
-
-    > .layerManagement {
-      display: flex;
+    .header {
+      align-items: center;
       justify-content: space-between;
-      margin: 10px 0 0;
-
-      > .layerButton {
-        border: 1px solid $color-3;
-        color: $color-3;
-        cursor: pointer;
-        font-size: $font-size-xxs-small;
-        font-weight: $font-weight-bold;
-        outline: none;
-        padding: 5px;
-        text-transform: uppercase;
-        width: calc(50% - 2px);
-      }
-    }
-  }
-
-  .pinnedItemCount {
-    color: rgba($color-3, .5);
-    font-size: $font-size-xs-small;
-    font-weight: $font-weight-bold;
-    text-transform: uppercase;
-  }
-}
-
-.lightItem {
-  background-color: $color-mid-blue;
-  margin-bottom: 10px;
-  margin-left: -35px;
-  margin-right: -35px;
-  color: $color-white;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 25px;
-}
-
-.item {
-  margin-bottom: 10px;
-  margin-left: -15px;
-  margin-right: -15px;
-  color: $color-white;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 25px;
-}
-
-
-.submenu {
-  flex-direction: column;
-  display: flex;
-  height: 100%;
-  padding: 10px 15px;
-
-  .submenuHeader {
-    align-items: center;
-    justify-content: space-between;
-    display: flex;
-    padding-bottom: 15px;
-    padding-top: 24px;
-
-    @media #{$mq-tablet} {
-      flex-direction: row;
-    }
-
-    .submenuTitle {
-      color: $color-4;
-      cursor: default;
-      font-family: $font-family-1;
-      font-size: $font-size-xxs-small;
-      font-weight: $font-weight-bold;
-      margin: 5px 0 0;
-      text-align: left;
-      text-transform: uppercase;
+      display: flex;
+      padding-bottom: 15px;
+      padding-top: 24px;
 
       @media #{$mq-tablet} {
-        font-size: $font-size-x-small;
-        margin: 0;
+        flex-direction: row;
+      }
+
+      .title {
+        color: $color-4;
+        cursor: default;
+        font-family: $font-family-1;
+        font-size: $font-size-xxs-small;
+        font-weight: $font-weight-bold;
+        margin: 5px 0 0;
         text-align: left;
+        text-transform: uppercase;
+
+        @media #{$mq-tablet} {
+          font-size: $font-size-x-small;
+          margin: 0;
+          text-align: left;
+        }
+      }
+    }
+
+    .content {
+      -webkit-overflow-scrolling: touch;
+      height: calc(100% - 108px);
+      overflow-y: auto;
+      padding: 15px 20px;
+
+      @media #{$mq-tablet} {
+        height: auto;
+        margin: 10px 0 0;
+        max-height: none;
+        overflow-y: visible;
+        padding: 15px 20px;
       }
     }
   }
 
-  .submenuContent {
-    -webkit-overflow-scrolling: touch;
-    height: calc(100% - 108px);
-    overflow-y: auto;
-    padding: 15px 20px;
-
-    @media #{$mq-tablet} {
-      height: auto;
-      margin: 10px 0 0;
-      max-height: none;
-      overflow-y: visible;
-      padding: 15px 20px;
-    }
+  .footer {
+    background-color: $color-mid-blue;
+    margin-bottom: 10px;
+    color: $color-white;
+    padding-top: 10px;
+    padding: 10px 35px;
   }
 }
 
